# OpenROAD-bazel

./: .bazelrc  BUILD  MODULE.bazel  WORKSPACE  build_helper.bzl
bazel/: BUILD  bison.bzl  flex.bzl  tcl_encode.bzl  tcl_wrap_cc.bzl
bazel/lemon/: bundled.BUILD.bazel
bazel/tk_tcl/: bundled.BUILD.bazel  tk_tcl.bzl
src/odb/src/def/: BUILD
src/rsz/src/: Resizer.cc
src/utl/: BUILD
src/utl/include/utl/: Logger.h
